--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
-<p>Welcome to your first GitHub Pages website!</p>
+<p>Welcome to vijay's first GitHub Pages website!</p><br>
+  <p> it is a c++ assignment question </p?
 
 </body>
 </html>
